--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
     canvas {
       max-width: 100%;
-      max-height: 500px;
       cursor: crosshair;
       border: 1px solid black;
     }
@@ -47,10 +46,10 @@
 <div class="controls">
   <input type="file" accept="image/*" id="imageInput" />
   
-  <select id="pointType">
+  <!-- <select id="pointType">
     <option value="connection">Connection Point</option>
     <option value="receiving">Receiving Point</option>
-  </select>
+  </select> -->
 </div>
 
 <div class="canvas-container">
@@ -86,6 +85,7 @@
           // Resize canvas to match image dimensions
           canvas.width = uploadedImage.width;
           canvas.height = uploadedImage.height;
+          ctx = canvas.getContext('2d');
           ctx.clearRect(0, 0, canvas.width, canvas.height); // Clear the canvas
           ctx.drawImage(uploadedImage, 0, 0); // Draw the image on the canvas
           canvas.style.display = "block"; // Show the canvas
@@ -108,23 +108,21 @@
     const y = event.clientY - rect.top;  // Y-coordinate relative to the image
 
     if (!jsonData[imageName]) {
-      jsonData[imageName] = {
-        receiving: [],
-        connection: []
-      };
+      jsonData[imageName] = [];
     }
 
     // Check if the click is near an existing dot and remove the dot if so
     if (!removeDotIfClicked(x, y)) {
       // If no dot was removed, add a new one
-      const selectedPointType = pointTypeSelector.value;
-      if (selectedPointType === "connection") {
-        jsonData[imageName].connection.push({ x, y });
-      } else if (selectedPointType === "receiving") {
-        jsonData[imageName].receiving.push({ x, y });
-      }
+      // const selectedPointType = pointTypeSelector.value;
+      // if (selectedPointType === "connection") {
+      //   jsonData[imageName].connection.push({ x, y });
+      // } else if (selectedPointType === "receiving") {
+      //   jsonData[imageName].receiving.push({ x, y });
+      // }
+      jsonData[imageName].push({ x, y });
 
-      drawDot(x, y, selectedPointType);
+      drawDot(x, y);
     }
 
     // Update JSON display
@@ -132,35 +130,35 @@
   });
 
   // Function to draw a dot at a given position
-  function drawDot(x, y, selectedPointType) {
+  function drawDot(x, y) {
     ctx.beginPath();
     ctx.arc(x, y, dotRadius, 0, 2 * Math.PI); // Draw a circle with radius 5px
-    ctx.fillStyle = selectedPointType === "connection" ? "blue" : "red"; // Use different colors for different point types
+    ctx.fillStyle = "red"; // Use different colors for different point types
     ctx.fill();
   }
 
   // Function to remove a dot if clicked and return true if a dot was removed
   function removeDotIfClicked(x, y) {
-    const connectionDots = jsonData[imageName].connection;
-    const receivingDots = jsonData[imageName].receiving;
+    const dots = jsonData[imageName];
+    //const receivingDots = jsonData[imageName].receiving;
     
     // Check if clicked near any connection point
-    for (let i = 0; i < connectionDots.length; i++) {
-      if (distance(x, y, connectionDots[i].x, connectionDots[i].y) <= dotRadius) {
-        connectionDots.splice(i, 1); // Remove the dot from the array
+    for (let i = 0; i < dots.length; i++) {
+      if (distance(x, y, dots[i].x, dots[i].y) <= dotRadius) {
+        dots.splice(i, 1); // Remove the dot from the array
         redraw(); // Redraw the canvas with the updated dots
         return true;
       }
     }
 
-    // Check if clicked near any receiving point
-    for (let i = 0; i < receivingDots.length; i++) {
-      if (distance(x, y, receivingDots[i].x, receivingDots[i].y) <= dotRadius) {
-        receivingDots.splice(i, 1); // Remove the dot from the array
-        redraw(); // Redraw the canvas with the updated dots
-        return true;
-      }
-    }
+    // // Check if clicked near any receiving point
+    // for (let i = 0; i < receivingDots.length; i++) {
+    //   if (distance(x, y, receivingDots[i].x, receivingDots[i].y) <= dotRadius) {
+    //     receivingDots.splice(i, 1); // Remove the dot from the array
+    //     redraw(); // Redraw the canvas with the updated dots
+    //     return true;
+    //   }
+    // }
 
     return false; // No dot was clicked
   }
@@ -171,14 +169,14 @@
     ctx.drawImage(uploadedImage, 0, 0); // Redraw the image
 
     // Redraw all connection dots
-    jsonData[imageName].connection.forEach(({ x, y }) => {
-      drawDot(x, y, "connection");
+    jsonData[imageName].forEach(({ x, y }) => {
+      drawDot(x, y);
     });
 
-    // Redraw all receiving dots
-    jsonData[imageName].receiving.forEach(({ x, y }) => {
-      drawDot(x, y, "receiving");
-    });
+    // // Redraw all receiving dots
+    // jsonData[imageName].receiving.forEach(({ x, y }) => {
+    //   drawDot(x, y);
+    // });
   }
 
   // Function to calculate distance between two points
