--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 
   canvas.addEventListener('click', (event) => {
     const rect = canvas.getBoundingClientRect();
-    const x = event.clientX - rect.left; // X-coordinate relative to the image
-    const y = event.clientY - rect.top;  // Y-coordinate relative to the image
+    const x = event.clientX - rect.left - 1.25; // X-coordinate relative to the image
+    const y = event.clientY - rect.top - 1.15;  // Y-coordinate relative to the image
 
     if (!jsonData[imageName]) {
       jsonData[imageName] = [];
